--- a/nav.css
+++ b/nav.css
@@ -3,11 +3,13 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: Oswald;
+  font-family: "Courgette", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 body {
   margin: 0;
-  background-color: #ede5d3;
+  background-color: #f9e4c8;
 }
 
 /* Fejléc stílusok */
@@ -34,12 +36,10 @@ header {
 }
 
 .logo img {
-  height: 40
-  px;
+  height: 40px;
   margin-right: 10px;
   vertical-align: middle;
 }
-
 .company-name {
   background-color: #b3adab;
   background-size: 100%;
@@ -53,7 +53,6 @@ header {
   display: inline-block;
   vertical-align: middle;
 }
-
 .nav-links {
   list-style: none;
   padding: 0;
@@ -69,39 +68,84 @@ header {
   transition: color 0.3s;
 }
 
+
 .nav-links a:hover {
-  color: #c7d1b4;
+  color: #fcbf21;
+
+}
+.scale-up-ver-top {
+	-webkit-animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+@-webkit-keyframes scale-up-ver-top {
+  0% {
+    -webkit-transform: scaleY(0.4);
+            transform: scaleY(0.4);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+}
+@keyframes scale-up-ver-top {
+  0% {
+    -webkit-transform: scaleY(0.4);
+            transform: scaleY(0.4);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+  100% {
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+    -webkit-transform-origin: 100% 0%;
+            transform-origin: 100% 0%;
+  }
+}
+.header {
+  border-radius : 0 0 20px 20px;
+  animation: scale-up-ver-top 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+.fade-in-fwd {
+	-webkit-animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+@-webkit-keyframes fade-in-fwd {
+  0% {
+    -webkit-transform: translateZ(-80px);
+            transform: translateZ(-80px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-in-fwd {
+  0% {
+    -webkit-transform: translateZ(-80px);
+            transform: translateZ(-80px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+.nav-links{
+  animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation-delay: 0.4s;
+}
+.logo {
+  animation: fade-in-fwd 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  animation-delay: 0.2s;
 }
 
-/* Admin gomb */
-.adminlogo {
-  width: 2.2rem;
-  position: relative;
-  top: 0;
-  right: 0;
-  z-index: 100;
-}
-
-.admin {
-  position: relative;
-  display: inline-block;
-}
-
-/* Hamburger menu icon */
-.menu-toggle {
-  display: none;
-  cursor: pointer;
-  font-size: 1.5rem;
-  color: #b3adab;
-  background: none;
-  border: none;
-  padding: 5px;
-  z-index: 1001;
-}
-
-.menu-toggle:focus {
-  outline: none;
-}
 
 /* Reszponzív stílusok */
 @media (max-width: 768px) {
