--- a/prods/prod.css
+++ b/prods/prod.css
@@ -1,25 +1,30 @@
 .product{
+
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin: 20px;
 }
 .product-name {
+    margin-top: 50px;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 .product-form {
+    
     display: flex;
     flex-direction: column;
     width: 300px;
 }
 .product-form label {
+    font-size: 30px;
     margin-bottom: 5px;
 }
 .product-form input[type="text"],
 .product-form input[type="number"],
 .product-form input[type="tel"] {
+    height: 70px;
+    font-size: 16px;
     padding: 8px;
     margin-bottom: 10px;
     border: 3px solid #d3d3d3;
@@ -52,11 +57,14 @@
     
 }
 .prodph {
-    width: 300px;
+    float:left;
+    margin-right: 20px;
+    width: 500px;
     height: auto;
     margin-bottom: 20px;
 }
 .product-description {
+    float:none;
     font-size: 16px;
     color: #555;
     text-align: center;
